--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # must be unique in a given SonarQube instance 
-sonar.projectKey=TDTES
+sonar.projectKey=tp2junit
 
 # defaults to project key 
 sonar.projectName=TD
